--- a/question/网络.md
+++ b/question/网络.md
@@ -36,3 +36,35 @@
 - 第一次握手成功让服务端知道了客户端具有发送能力
 - 第二次握手成功让客户端知道了服务端具有接收和发送能力，但此时服务端并不知道客户端是否接收到了自己发送的消息
 - 所以第三次握手就起到了这个作用。
+
+## 浏览器缓存
+
+### 强制缓存
+
+​	expires: 其值为服务器返回该请求结果缓存的到期时间，即再次发起该请求时，如果客户端的时间小于Expires的值时，直接使用缓存结果。
+
+​	cache-Control:是最重要的规则，主要用于控制网页缓存，主要取值为：
+
+- public：所有内容都将被缓存（客户端和代理服务器都可缓存）
+- private：所有内容只有客户端可以缓存，Cache-Control的默认取值
+- no-cache：客户端缓存内容，但是是否使用缓存则需要经过协商缓存来验证决定
+- no-store：所有内容都不会被缓存，即不使用强制缓存，也不使用协商缓存
+- max-age=xxx (xxx is numeric)：缓存内容将在xxx秒后失效
+
+cache-Control 优先级大于 expires，cache-Control是一个相对值，expires是一个绝对值
+
+
+### 协商缓存(需要与cache-control配合使用)
+
+​	强制缓存失效，使用协商缓存，协商缓存生效返回304
+
+​	last-modified / if-modified-since:  资源最后修改时间
+
+​	etag / if-none-match: 文件的唯一标志
+
+​	etag 优先级大于 last-modified，last-modified精确到秒级，一秒内的改动无法保证文件最新
+
+
+
+
+
