--- a/question/网络.md
+++ b/question/网络.md
@@ -31,6 +31,29 @@
   - 503 服务不可用：服务器目前无法使用
   - 504 网关超时：网关或代理服务器，未及时获取请求
 
+
+100：客户端在发送POST数据给服务器前，征询服务器情况，看服务器是否处理POST的数据，如果不处理，客户端则不上传POST数据，如果处理，则POST上传数据。常用于POST大数据传输
+
+206：一般用来做断点续传，或者是视频文件等大文件的加载
+
+301：永久重定向会缓存。新域名替换旧域名，旧的域名不再使用时，用户访问旧域名时用301就重定向到新的域名
+
+302：临时重定向不会缓存，常用 于未登陆的用户访问用户中心重定向到登录页面
+
+304：协商缓存，告诉客户端有缓存，直接使用缓存中的数据，返回页面的只有头部信息，是没有内容部分
+
+400：参数有误，请求无法被服务器识别
+
+403：告诉客户端进制访问该站点或者资源，如在外网环境下，然后访问只有内网IP才能访问的时候则返回
+
+404：服务器找不到资源时，或者服务器拒绝请求又不想说明理由时
+
+503：服务器停机维护时，主动用503响应请求或 nginx 设置限速，超过限速，会返回503
+
+504：网关超时
+
+
+
   ## 三次握手 四次挥手
 
 - 第一次握手成功让服务端知道了客户端具有发送能力
@@ -63,6 +86,36 @@ cache-Control 优先级大于 expires，cache-Control是一个相对值，expire
 ​	etag / if-none-match: 文件的唯一标志
 
 ​	etag 优先级大于 last-modified，last-modified精确到秒级，一秒内的改动无法保证文件最新
+
+### http 和 https
+ http是超文本传输协议基于明文传输的，可以传输任何数据类型，具体取决于content-type，http是无连接即处理完请求，收到客户端回应后，就会断开连接，也是无状态的无法根据之前的状态处理本次请求。
+ https是在http的基础上进行加密处理，通过SSL（secure sockets layer） + TSL（transport layer security）,SSL 主要通过
+ https交换密钥是通过混合加密实现的。摘要算法主要是确保数据的完整性，没有被修改，摘要算法会将任意长度的数据压缩成固定长度、且独一无二的字符串。数字签名是为了确保消息是由发送方签名并发出来的，签名任何人都可以获取，但是只有用私钥对应的公钥才能解开。
+
+ ### tcp 和 udp
+ udp（user datapackage protocol）用户数据包协议
+ tcp（transform control protocol） 传输控制协议
+ udp只会加上包头，然后发送出去，不会做负载均衡、分包？ 发送顺序的处理、选择好的发送链路
+ tcp可以做到负载均衡，tcp会创建资源池，如果出现堵塞，会将请求发到资源池内
+
+ tcp适用于需要准确传递信息的场景，那些场景？
+ upd只需要快速发送？ 类比发布订阅 与 观察者模式？
+
+ ### iso七层模型
+
+ ### DNS（Domain Names Stystem）
+
+ ### CDN（content deliverty network）
+
+ ### http1.0、http1.1 和 http2.0
+
+ ### get 和 post
+  都是基于tcp链接，只是浏览器和服务器做了一些限制才会有一些区别
+
+ ### http请求头
+  协商缓存
+  会话状态
+
 
 
 
