--- a/question/网络.md
+++ b/question/网络.md
@@ -108,6 +108,10 @@ cache-Control 优先级大于 expires，cache-Control是一个相对值，expire
  ### CDN（content deliverty network）
 
  ### http1.0、http1.1 和 http2.0
+  http1.0 与服务器只会保持短暂的连接，每次请求都需要建立一个tcp连接，完成请求后会断开连接。
+  http1.1 默认支持长连接（connection: keep-alive），即可以在一个tcp连接上发送多个htpp请求，同时允许客户端不需要等待上一次请求返回就可以发送请求，但是服务端必须按顺序返回请求。同时增加更多的响应头，完善功能，例如引入缓存控制策略；增加了delete put options请求。
+  http2.0 新增多路复用、二进制分帧、头部压缩和服务器推送。复用TCP连接，在一个连接里，客户端和浏览器都可以同时发送多个请求或回应，而且不用按照顺序一一对应，这样就避免了”队头堵塞。HTTP/2 采用二进制格式传输数据，而非 HTTP 1.x的文本格式，解析起来更高效，将请求和响应数据分割为更小的帧，并且它们采用二进制编码，帧可以乱序发送，通过帧首部的流标识重新组装，这也是多路复用的基础。HTTP/2在客户端和服务器端使用“首部表”来跟踪和存储之前发送的键值对，对于相同的请求，不需要发送首部。允许服务器将资源推送给客户端，适用于静态资源加载，将需要的静态资源提前发送过去，减少请求。
+
 
  ### get 和 post
   都是基于tcp链接，只是浏览器和服务器做了一些限制才会有一些区别
@@ -115,6 +119,10 @@ cache-Control 优先级大于 expires，cache-Control是一个相对值，expire
  ### http请求头
   协商缓存
   会话状态
+
+ ### tcp四次握手三次挥手
+
+ ### webScoket
 
 
 
