--- a/question/网络.md
+++ b/question/网络.md
@@ -54,11 +54,18 @@
 
 
 
-  ## 三次握手 四次挥手
+  ## TCP三次握手 四次挥手
+
+  TCP是全双工
 
 - 第一次握手成功让服务端知道了客户端具有发送能力
 - 第二次握手成功让客户端知道了服务端具有接收和发送能力，但此时服务端并不知道客户端是否接收到了自己发送的消息
 - 所以第三次握手就起到了这个作用。
+
+- 第一次挥手服务端告诉客户端我要断开连接
+- 第二次挥手服务器告诉客户端我知道你要断开了，但我还有请求没发完
+- 第三次挥手服务器告诉客户端，可以断开连接了
+- 第四次挥手客户端高数服务器，断开连接
 
 ## 浏览器缓存
 
@@ -89,23 +96,47 @@ cache-Control 优先级大于 expires，cache-Control是一个相对值，expire
 
 ### http 和 https
  http是超文本传输协议基于明文传输的，可以传输任何数据类型，具体取决于content-type，http是无连接即处理完请求，收到客户端回应后，就会断开连接，也是无状态的无法根据之前的状态处理本次请求。
- https是在http的基础上进行加密处理，通过SSL（secure sockets layer） + TSL（transport layer security）,SSL 主要通过
- https交换密钥是通过混合加密实现的。摘要算法主要是确保数据的完整性，没有被修改，摘要算法会将任意长度的数据压缩成固定长度、且独一无二的字符串。数字签名是为了确保消息是由发送方签名并发出来的，签名任何人都可以获取，但是只有用私钥对应的公钥才能解开。
+ https是在http的基础上进行加密处理，通过SSL（secure sockets layer） + TSL（transport layer security）,SSL 主要通过对称加密、非对称加密、摘要算法和数字签名。https交换密钥是通过混合加密实现的。摘要算法主要是确保数据的完整性，没有被修改，摘要算法会将任意长度的数据压缩成固定长度、且独一无二的字符串。数字签名是为了确保消息是由发送方签名并发出来的，签名任何人都可以获取，但是只有用私钥对应的公钥才能解开。
 
  ### tcp 和 udp
- udp（user datapackage protocol）用户数据包协议
- tcp（transform control protocol） 传输控制协议
+ udp（user datagram protocol）用户数据包协议
+ tcp（transmission control protocol） 传输控制协议
  udp只会加上包头，然后发送出去，不会做负载均衡、分包？ 发送顺序的处理、选择好的发送链路
  tcp可以做到负载均衡，tcp会创建资源池，如果出现堵塞，会将请求发到资源池内
 
  tcp适用于需要准确传递信息的场景，那些场景？
  upd只需要快速发送？ 类比发布订阅 与 观察者模式？
+ -----------------------------------------------------
+ udp是无连接的简单的面向数据报的通信协议，即对应用层交下来的报文，不合并、不拆分，只是加上首部后就交给下面的网络层。丢包不重发、无法避免网络拥堵。
 
- ### iso七层模型
+ tcp是有连接的可靠的面向字节流的通信协议，把上面应用层交下来的数据看成无结构的字节流来发送。只有确认通信端存在的时候才会发送数据（有连接）、丢包可以重发、对次序乱的包可以进行控制。
+
+
+ ### osi七层模型
+ 应用层
+ 表示层
+ 会话层
+ 传输层
+ 网络层
+ 链路层
+ 物理层
 
  ### DNS（Domain Names Stystem）
-
+ 域名系统，将域名跟ip对应起来
+ 域名是一个层次结构，从上到下为根域名、顶级域名、二级域名....，在域名的每一层都有一个域名服务器
+ #### 域名查询方式
+ 以a请求b为例：
+  递归查询
+    如果b没有a想要的结果，就会帮a去查找，直到找到为止
+  迭代查询
+    如果b没有a想要的结果，就会告诉a怎么去查找，知道a找到
+  #### 域名缓存
+    浏览器缓存：获取到网站域名的实际ip的时候，会进行缓存
+    操作系统缓存： 定义host
+  #### DNS查询
+    浏览器缓存 ---> 操作系统缓存 ---> 迭代查询
  ### CDN（content deliverty network）
+ 内容分发网络，可以不访问源站就可以获取资源。如果应用了cdn，在进行域名查找的时候，不在返回一个ip，而是返回一个别名记录，指向cdn的负载均衡，负载均衡根据用户ip地址，找到最近的边缘节点，检查节点的负载情况，将节点返回给用户。
 
  ### http1.0、http1.1 和 http2.0
   http1.0 与服务器只会保持短暂的连接，每次请求都需要建立一个tcp连接，完成请求后会断开连接。
@@ -115,6 +146,16 @@ cache-Control 优先级大于 expires，cache-Control是一个相对值，expire
 
  ### get 和 post
   都是基于tcp链接，只是浏览器和服务器做了一些限制才会有一些区别
+  + get的请求参数会被记录在浏览器历史记录中，post参数不会被保存
+  + get的请求会被浏览器主动缓存，post不会
+  + get通过url传参，post通过body传参
+ ### 输入url敲下回车会发送什么
+  url解析
+  DNS 寻址
+  tcp连接
+  http请求
+  响应请求
+  渲染页面
 
  ### http请求头
   协商缓存
@@ -123,7 +164,13 @@ cache-Control 优先级大于 expires，cache-Control是一个相对值，expire
  ### tcp四次握手三次挥手
 
  ### webScoket
+  webScoket 是应用层协议，主要是为了解决http的请求-应答模式产生的，请求应答是一种半双工的通信模式。它是一种被动的通信模式，服务器只能被动响应客户端请求，无法主动推送。
+  websocket是全双工的，握手是一个标准的http get请求，但是需要带上协议升级的专用字段头
+  “Connection: Upgrade”，表示要求协议“升级”；
+  “Upgrade: websocket”，表示要“升级”成 WebSocket 协议。
 
+ ### webscoket 和 http2
+  http2的主动推送主要是针对静态资源缓存使用的
 
 
 
