doc: 怎样封装一个组件

--- a/前端总结/question/网络.md
+++ b/前端总结/question/网络.md
@@ -172,6 +172,9 @@ cache-Control 优先级大于 expires，cache-Control是一个相对值，expire
  ### webscoket 和 http2
   http2的主动推送主要是针对静态资源缓存使用的
 
+ ### ajax
+  JavaScript执行异步网络请求
+
 
 
 
