--- a/前端总结/question/网络.md
+++ b/前端总结/question/网络.md
@@ -65,7 +65,7 @@
 - 第一次挥手服务端告诉客户端我要断开连接
 - 第二次挥手服务器告诉客户端我知道你要断开了，但我还有请求没发完
 - 第三次挥手服务器告诉客户端，可以断开连接了
-- 第四次挥手客户端高数服务器，断开连接
+- 第四次挥手客户端告诉服务器，断开连接
 
 ## 浏览器缓存
 
