doc: webpack & tailWind

--- a/前端总结/工程化.md
+++ b/前端总结/工程化.md
@@ -3,3 +3,8 @@
 ## babel运行原理 & AST语法树
 
 ## 打包工具流程（webpack、gulp、vite）
+### webpack-mini
+js之前是脚本语言，随着项目的扩大，模块化产生，需要对不同模块进行组合
+webpack就是分析不同模块之间的关系，借助bable(ast语法树、将esmodule转化成commonjs)构建依赖图谱，然后自执行依赖图谱的第一个function。
+loader: 将非js转换成js代码
+plugins: 基于事件实现(tapable), plugin先注册事件，webpack在不同阶段触发事件。
