--- a/前端总结/重排和重绘.md
+++ b/前端总结/重排和重绘.md
@@ -1,6 +1,6 @@
 ## 重排和重绘
 
-1. 解析HTML获取生成DOM树，解析CSS生成CSSOM树
+1. 解析HTML获取生成DOM（文档对象模型）树，解析CSS生成CSSOM（CSS对象模型）树
 
 2. 将DOM树与CSSOM树结合生成渲染树
 
@@ -11,6 +11,10 @@
 5. 将像素信息发送给显卡，渲染在界面上
 
 只会影响到动画和交互
+
+补充：
+
+​	CSSOM的过程和构建DOM的过程类似，但前者要依赖后者，因为只有HTML内容具有完整的树形结构关系，而CSS样式表并没有。
 
 
 
